# Bouc

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Accueil.svelte  Ajouter.svelte  Bibliotheque.svelte  Livre.svelte  LivreAuHasard.svelte  MenuBlock.svelte
