[package]
name = "bouc"
version = "0.1.0"
description = "Une Bibliothèque légère"
authors = ["CypprienGille"]
license = ""
repository = ""
default-run = "bouc"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0.83"
serde = { version = "1.0.142", features = ["derive"] }
tauri = { version = "1.0.5", features = ["window-create"] }
# tokio + rustls
sqlx = { version = "0.6.1", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = {version = "1.20.1", features = ["full"] }
anyhow = "1.0.59"
futures = "0.3.21"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
