[package]
name = "bouc"
version = "0.1.0"
description = "Une Bibliothèque légère"
authors = ["CypprienGille"]
license = ""
repository = ""
default-run = "bouc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
tauri = { version = "1.6.1", features = ["window-create"] }
# tokio + rustls
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.81"
futures = "0.3.30"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
